--- a/ScrapeNewsWebsites.ipynb
+++ b/ScrapeNewsWebsites.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,14 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TOTAL from here:- 1870\n"
+      "TOTAL from here:- 1969\n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,14 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TOTAL from here:- 4279\n"
+      "TOTAL from here:- 4286\n"
      ]
     }
    ],
@@ -208,14 +208,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TOTAL from here:- 310\n"
+      "TOTAL from here:- 312\n"
      ]
     }
    ],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -327,16 +327,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9844"
+       "9952"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,26 +347,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
-    "buffer=pd.read_csv(r'C:/Users/shubh/Desktop/words.csv')"
+    "buffer=pd.read_csv(r'words.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -449,8 +448,8 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>Mint Covid Tracker: Despite slowing trajectory...</td>\n",
-       "      <td>2</td>\n",
+       "      <td>Coronavirus update: India's Covid-19 count cro...</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -461,74 +460,74 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>Will North Korea Get its 'First Female Dictato...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Coronavirus Pandemic LIVE Updates: India Cases...</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>Coronavirus Pandemic LIVE Updates: 1,436 Cases...</td>\n",
-       "      <td>4</td>\n",
+       "      <td>Man who tested positive for COVID-19 kills sel...</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>5</td>\n",
-       "      <td>An Expert Explains: What is the future of migr...</td>\n",
+       "      <td>‘Shame and disgust’: Rahul Gandhi amid row ove...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>6</td>\n",
-       "      <td>6,184 or 22.17% COVID-19 patients have recover...</td>\n",
+       "      <td>No Need for Migrants to Go Back to Hometown, C...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>7</td>\n",
-       "      <td>Anantnag braces for Covid-19 spurt as pregnant...</td>\n",
-       "      <td>2</td>\n",
+       "      <td>Delhi High Court orders to cap the price of co...</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>8</td>\n",
-       "      <td>Congress targets Centre over antibody test kit...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Nitish Kumar says no to getting students back ...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>9</td>\n",
-       "      <td>Over 80% wheat crop harvested: MHA</td>\n",
-       "      <td>0</td>\n",
+       "      <td>47 new coronavirus reported from Chennai, 570 ...</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>10</td>\n",
-       "      <td>China’s Wuhan city discharges last COVID-19 pa...</td>\n",
-       "      <td>2</td>\n",
+       "      <td>Will North Korea Get its 'First Female Dictato...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>11</td>\n",
-       "      <td>Australia rejects Chinese 'economic coercion' ...</td>\n",
-       "      <td>2</td>\n",
+       "      <td>Will US-Taliban deal limit India's leverage in...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>12</td>\n",
-       "      <td>Saudi Arabia ends death penalty for minors and...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>UN say pandemic may cause 'human rights disast...</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>13</td>\n",
-       "      <td>Coronavirus Outbreak LIVE Updates: Five more C...</td>\n",
-       "      <td>7</td>\n",
+       "      <td>Saudi Arabia ends death penalty for minors</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>14</td>\n",
-       "      <td>Coronavirus: What mutual fund investors should...</td>\n",
-       "      <td>4</td>\n",
+       "      <td>Slideshow | Gainers &amp; Losers: 10 stocks that m...</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -537,23 +536,23 @@
       "text/plain": [
        "    id                                          headlines  ChanceOfVirality\n",
        "0    0  Need to give importance to economy and also ba...                 2\n",
-       "1    1  Mint Covid Tracker: Despite slowing trajectory...                 2\n",
+       "1    1  Coronavirus update: India's Covid-19 count cro...                 4\n",
        "2    2  ‘Won’t lose a single rupee’: Govt clarifies af...                 1\n",
-       "3    3  Will North Korea Get its 'First Female Dictato...                 1\n",
-       "4    4  Coronavirus Pandemic LIVE Updates: 1,436 Cases...                 4\n",
-       "5    5  An Expert Explains: What is the future of migr...                 1\n",
-       "6    6  6,184 or 22.17% COVID-19 patients have recover...                 1\n",
-       "7    7  Anantnag braces for Covid-19 spurt as pregnant...                 2\n",
-       "8    8  Congress targets Centre over antibody test kit...                 1\n",
-       "9    9                 Over 80% wheat crop harvested: MHA                 0\n",
-       "10  10  China’s Wuhan city discharges last COVID-19 pa...                 2\n",
-       "11  11  Australia rejects Chinese 'economic coercion' ...                 2\n",
-       "12  12  Saudi Arabia ends death penalty for minors and...                 0\n",
-       "13  13  Coronavirus Outbreak LIVE Updates: Five more C...                 7\n",
-       "14  14  Coronavirus: What mutual fund investors should...                 4"
+       "3    3  Coronavirus Pandemic LIVE Updates: India Cases...                 5\n",
+       "4    4  Man who tested positive for COVID-19 kills sel...                 2\n",
+       "5    5  ‘Shame and disgust’: Rahul Gandhi amid row ove...                 1\n",
+       "6    6  No Need for Migrants to Go Back to Hometown, C...                 1\n",
+       "7    7  Delhi High Court orders to cap the price of co...                 3\n",
+       "8    8  Nitish Kumar says no to getting students back ...                 0\n",
+       "9    9  47 new coronavirus reported from Chennai, 570 ...                 5\n",
+       "10  10  Will North Korea Get its 'First Female Dictato...                 1\n",
+       "11  11  Will US-Taliban deal limit India's leverage in...                 1\n",
+       "12  12  UN say pandemic may cause 'human rights disast...                 2\n",
+       "13  13         Saudi Arabia ends death penalty for minors                 0\n",
+       "14  14  Slideshow | Gainers & Losers: 10 stocks that m...                 1"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
